# itemtest

./: .gitignore  CMakeLists.txt  readme.md  resources.qrc
.github/: copilot-instructions.md
.github/instructions/: test-patterns.instructions.md
.github/prompts/: new-component.prompt.md
.github/skills/visual-review/: SKILL.md
openspec/changes/archive/2026-04-17-flipview-cross-platform-input/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-18-align-dialog-content-to-winui3-gif/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-18-listview-cross-platform-input/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-18-qt5-qt6-compatibility/: design.md  proposal.md  tasks.md
openspec/changes/fix-list-view-windows-wheel-input/: design.md  proposal.md  tasks.md
openspec/specs/auto-suggest-box/: spec.md
openspec/specs/combobox-dropdown-flyout/: spec.md
openspec/specs/dialog-winui3-polish/: spec.md
openspec/specs/flipview-wheel-input/: spec.md
openspec/specs/fluent-window/: spec.md
openspec/specs/flyout/: spec.md
openspec/specs/label/: spec.md
openspec/specs/listview-wheel-input/: spec.md
openspec/specs/number-box/: spec.md
openspec/specs/password-box/: spec.md
openspec/specs/popup-overlay/: spec.md
openspec/specs/progress-ring/: spec.md
openspec/specs/qt-version-compatibility/: spec.md
openspec/specs/teaching-tip/: spec.md
openspec/specs/window-platform-compatibility/: spec.md
src/: widget.cpp
src/common/: Animation.h  Breakpoints.h  CornerRadius.h  Elevation.h  Material.h  QtCompat.h  Spacing.h  ThemeColors.h  Typography.h
src/compatibility/: WindowChromeCompat.cpp  WindowChromeCompat.h  WindowChromeCompat_fallback.cpp  WindowChromeCompat_mac.cpp  WindowChromeCompat_win.cpp
src/design/: Animation.h  CornerRadius.h  Material.h  Spacing.h  ThemeColors.h  Typography.h
src/items/: DebugOverlay.cpp  DebugOverlay.h  Dialog.cpp  Dialog.h  Label.cpp  Label.h  Popup.cpp  Popup.h  PushButton.cpp  PushButton.h  ResponsiveDialog.h  ResponsiveLabel.cpp  ResponsiveLabel.h  ResponsivePushbutton.cpp
src/items/instance/: Popup.cpp  Popup.h
src/items/interface/: ResponsiveDialog.cpp  ResponsiveDialog.h  ResponsiveLabel.cpp  ResponsiveLabel.h  ResponsivePushbutton.cpp  ResponsivePushbutton.h
src/layout/: AnchorLayout.cpp  AnchorLayout.h
src/layouts/: AnchorLayout.cpp  AnchorLayout.h
src/utils/: DebugOverlay.cpp  DebugOverlay.h  PropertyBinder.cpp  PropertyBinder.h
src/view/: FluentElement.cpp  FluentElement.h  FluentElement_p.h  QMLPlus.cpp  QMLPlus.h
src/view/basicinput/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ColorPicker.cpp  ColorPicker.h  ComboBox.cpp  ComboBox.h  DropDownButton.cpp  DropDownButton.h  HyperlinkButton.cpp  HyperlinkButton.h  RadioButton.cpp  RadioButton.h  RatingControl.cpp  RatingControl.h  RepeatButton.cpp  RepeatButton.h  Slider.cpp  Slider.h  SplitButton.cpp  SplitButton.h  ToggleButton.cpp  ToggleButton.h  ToggleSplitButton.cpp  ToggleSplitButton.h  ToggleSwitch.cpp  ToggleSwitch.h
src/view/collections/: FlipView.cpp  FlipView.h  GridView.cpp  GridView.h  ListItemAccentAnimator.cpp  ListItemAccentAnimator.h  ListView.cpp  ListView.h  TreeView.cpp  TreeView.h
src/view/dialogs&flyouts/: Dialog.h
src/view/dialogs_flyouts/: ContentDialog.cpp  ContentDialog.h  Dialog.cpp  Dialog.h  Flyout.cpp  Flyout.h  Popup.cpp  Popup.h  TeachingTip.cpp  TeachingTip.h
src/view/menus&toolbars/: MenuBar.cpp
src/view/menus_toolbars/: Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h
src/view/scrolling/: ScrollBar.cpp  ScrollBar.h
src/view/status_info/: ProgressRing.cpp  ProgressRing.h  ToolTip.cpp  ToolTip.h
src/view/textfields/: AutoSuggestBox.cpp  AutoSuggestBox.h  Label.cpp  Label.h  LineEdit.cpp  LineEdit.h  NumberBox.cpp  NumberBox.h  PasswordBox.cpp  PasswordBox.h  PlainTextEdit.cpp  PlainTextEdit.h  TextBlock.cpp  TextBlock.h  TextBox.cpp  TextBox.h  TextEdit.cpp  TextEdit.h
src/view/windowing/: TitleBar.cpp  TitleBar.h  Window.cpp  Window.h
src/viewmodel/: VM_ResponsiveDialog.cpp  VM_ResponsiveDialog.h  VM_ResponsiveLabel.cpp  VM_ResponsiveLabel.h  VM_ResponsivePushbutton.cpp  VM_ResponsivePushbutton.h  ViewModel.cpp  ViewModel.h
tests/: CMakeLists.txt
tests/items/: TestDialog.cpp  TestLabel.cpp  TestPopup.cpp  TestPushButton.cpp  TestResponsiveDialog.cpp  TestResponsiveLabel.cpp  TestResponsivePushbutton.cpp
tests/items/instance/: TestPopup.cpp
tests/items/interface/: TestResponsiveDialog.cpp  TestResponsiveLabel.cpp  TestResponsivePushbutton.cpp
tests/layouts/: TestAnchorLayout.cpp
tests/views/: CMakeLists.txt  TestAnchorLayout.cpp  TestFluentElement.cpp  TestIconFont.cpp  TestQMLPlus.cpp  TestQtCompat.cpp  TestSegoe.cpp
tests/views/basicinput/: CMakeLists.txt  TestButton.cpp  TestCheckBox.cpp  TestColorPicker.cpp  TestComboBox.cpp  TestDropDownButton.cpp  TestHyperlinkButton.cpp  TestRadioButton.cpp  TestRatingControl.cpp  TestRepeatButton.cpp  TestSlider.cpp  TestSplitButton.cpp  TestToggleButton.cpp  TestToggleSplitButton.cpp  TestToggleSwitch.cpp
tests/views/collections/: CMakeLists.txt  FluentGridItemDelegate.cpp  FluentGridItemDelegate.h  FluentListItemDelegate.cpp  FluentListItemDelegate.h  FluentTreeItemDelegate.cpp  FluentTreeItemDelegate.h  TestFlipView.cpp  TestGridView.cpp  TestListView.cpp  TestTreeView.cpp
tests/views/dialogs&flyouts/: TestDialog.cpp
tests/views/dialogs_flyouts/: CMakeLists.txt  TestContentDialog.cpp  TestDialog.cpp  TestFlyout.cpp  TestPopup.cpp  TestTeachingTip.cpp
tests/views/menus&toolbars/: TestMenuBar.cpp
tests/views/menus_toolbars/: CMakeLists.txt  TestMenuBar.cpp
tests/views/scrolling/: CMakeLists.txt  TestScrollBar.cpp
tests/views/status_info/: CMakeLists.txt  TestProgressRing.cpp  TestToolTip.cpp
tests/views/textfields/: CMakeLists.txt  TestAutoSuggestBox.cpp  TestLabel.cpp  TestLineEdit.cpp  TestNumberBox.cpp  TestPasswordBox.cpp  TestPlainTextEdit.cpp  TestTextBlock.cpp  TestTextBox.cpp  TestTextEdit.cpp
tests/views/windowing/: CMakeLists.txt  TestWindow.cpp
(+47 files in other folders)
