# views 根目录下的测试
add_qt_test_module(test_anchor_layout TestAnchorLayout.cpp)
add_qt_test_module(test_fluent_element TestFluentElement.cpp)
add_qt_test_module(test_qml_plus TestQMLPlus.cpp)
add_qt_test_module(test_segoe TestSegoe.cpp)

add_subdirectory(basicinput)
add_subdirectory(menus_toolbars)
add_subdirectory(textfields)
add_subdirectory(dialogs_flyouts)
add_subdirectory(status_info)
